# simpiwallet

./: .gitignore  Cargo.toml  README.md  regtest.conf  shell.nix  testnet.conf
src/: descriptor.rs  error.rs  key.rs  main.rs  network.rs  parse.rs  rpc.rs  spend.rs  state.rs
