[package]
name = "simpiwallet"
version = "0.1.0"
edition = "2021"

[dependencies]
simplicity = { git = "https://github.com/uncomputable/rust-simplicity", rev = "ff6482ec161ec4cdec58f70f2d7a7ae7fff15a5b", features = ["serde"] }
elements-miniscript = { git = "https://github.com/uncomputable/elements-miniscript", rev = "899cb283a828b0cb6f6ce19f0d9d91af3a6c6fa7", features = ["serde"] }
lexopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = "0.16.0"
